Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-29826

qmake project including Win32 resources fails to link with VS2012

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.1.1
    • 4.8.4, 5.0.1
    • Build tools: qmake
    • None
    • Windows 7
    • fa1fb5ed945650d45cf9b61906232cfbae11360e

    Description

      If you have in the pro file:
      VERSION = 5.0.0

      and build project with VS2012 and msbuild:
      qmake -spec win32-msvc2012 -tp vc test.pro
      msbuild test.vcxproj

      resource file gets included twice and compilation fails with "fatal error CVT1100: duplicate resource"

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            andysh Andy Shaw
            qtcomsupport Qt Support
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes